# puzzle

./: .env.sample  .gitignore  README.md  docker-compose.yaml  pentamino_pieces.py  requirements.txt  solver.py  solver.py.lprof  test_engine.py
backend/: .env.sample  .flake8  Dockerfile  README.md  dev_requirements.txt  manage.py  pyproject.toml  requirements.txt  test-requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 14be3affd958_add_count_column.py  1f37e3800cd9_add_menu.py  6b4a0e0c1564_added_note_column_to_game.py  81641f63833f_add_flipped_field_to_rotation.py  81641f63833f_compressed_2024_08_12.py  8ec43e574466_update_game_note.py  8ff83205898f_added_cascade_to_gamepieces.py  dbfb8168026e_add_piece.py
backend/app/: color_logging.py  main.py
backend/app/api/: exceptions.py  routers.py  utility.py
backend/app/api/endpoints/: cover.py  game.py  main.py  piece.py  play.py  user.py
backend/app/core/: base.py  config.py  db.py  init_db.py  user.py
backend/app/crud/: piece.py
backend/app/models/: base.py  game.py  menu.py  user.py
backend/app/repositories/: game_repository.py  menu.py  piece_repository.py  repository.py
backend/app/schemas/: game.py  menu.py  piece.py  validators.py
backend/app/services/: image.py  piece.py  play.py
backend/engine/: README.md  board.py  disjointset.py  piece.py  samples.py  solver.py  types.py
backend/profiling/: solutions.py
backend/tests/: test_board.py
backend/tests/test_app/: conftest.py  test_menu.py
backend/tests/test_engine/: test_board.py  test_piece.py  test_solver.py
(+111 files in other folders)
